@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.csh</groupId>
         <artifactId>csh-utils</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>thread</artifactId>
@@ -70,6 +70,5 @@
 
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
-        <argLine>--enable-native-access=ALL-UNNAMED</argLine>
     </properties>
 </project> 
